Create mandelbrot and sierpinski renderers